res/examples/valid/call_callable_fn_stmt_with_calls_as_args.eg
fn sum (a: number, b: number): number => {
    a + b
}

sum(sum(5, 5), sum(10, 50));