res/examples/invalid/let_decl_call_fn_expr_with_type_mismatch_return_value.eg
let value: string;

let sum = (a: number, b: number): number => { a + b };

value = sum(10, 20);

// out: TypeError: mismatched types: expected type `string` but received `number`